# agentic-bo

./: .gitignore  CLAUDE.md  README.md  explorations.ipynb  pyproject.toml
.claude/: README.md
.claude/skills/bo-auto-from-prompt/: SKILL.md
bo_workflow/: __init__.py  cli.py  engine.py  engine_cli.py  experiment_strategies.py  oracle.py  oracle_cli.py  plotting.py  utils.py
bo_workflow/application/: __init__.py  engine.py  engine_helpers.py
bo_workflow/converters/: molecule_descriptors.py  reaction_drfp.py
bo_workflow/infrastructure/: __init__.py  oracle.py
bo_workflow/interfaces/: __init__.py
bo_workflow/molecular/: __init__.py  crem_ops.py  energy.py  feasibility.py  scaffold.py  types.py
bo_workflow/observers/: __init__.py  proxy.py
bo_workflow/shared/: __init__.py  json_io.py  run_id.py  run_paths.py  types.py
bo_workflow/tools/: __init__.py
bo_workflow/workflows/: __init__.py  data_utils.py  egfr_common.py  egfr_ic50_global.py  smiles_workflow_common.py
configs/: her.toml  run_spec.example.json
data/: OER_catalyst_data.csv  egfr_ic50.csv  egfr_seed50_mixed.csv
data/bh_drfp/: catalog.csv
experiments/: run_her.py
results/her/: HER_bo_results.npz
scripts/: compare_optimizers.py  compare_representations.py  egfr_ic50_global_experiment.py  egfr_ic50_real_experiment.py  egfr_lookup_experiment.py
src/bo_workflow/: __init__.py  cli.py  config.py  engine.py  experiment.py  observers.py  oracle.py  oracle_cli.py  plotting.py  prompt_spec.py  runner.py  type_defs.py  utils.py
tests/: conftest.py  test_drfp_converter.py  test_integration.py
(+38 files in other folders)
