[project]
name = "bo-fun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "disjoint-set",
    "gpytorch>=1.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pymoo",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
